Changed Login screen - Removed logo, added reset password button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password">Password</string>
     <string name="name">Your name</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="reset_password">Reset Password</string>
 </resources>
