--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="reset_password">Reset Password</string>
     <string name="continue_without_signing_in">Continue without Signing in</string>
+    <string name="send_reset_link">Send Reset Link</string>
 </resources>
